// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders TASK_FAILED 1`] = `
<div
  className="breadcrumb__content breadcrumb__content--supplemental"
>
  <div
    className="service-page-header-status muted"
  >
    (
    <span
      className={undefined}
    >
      Failed
    </span>
    )
  </div>
</div>
`;

exports[`Status renders TASK_RUNNING 1`] = `
<div
  className="breadcrumb__content breadcrumb__content--supplemental"
>
  <div
    className="service-page-header-status muted"
  >
    (
    <span
      className={undefined}
    >
      Running
    </span>
    )
  </div>
</div>
`;

exports[`Status renders TASK_STARTED 1`] = `
<div
  className="breadcrumb__content breadcrumb__content--supplemental"
>
  <div
    className="service-page-header-status muted"
  >
    (
    <span
      className={undefined}
    >
      Started
    </span>
    )
  </div>
</div>
`;

exports[`Status renders TASK_STARTING 1`] = `
<div
  className="breadcrumb__content breadcrumb__content--supplemental"
>
  <div
    className="service-page-header-status muted"
  >
    (
    <span
      className={undefined}
    >
      Starting
    </span>
    )
  </div>
</div>
`;
